# wana_kana_rust

./: .travis.yml  Cargo.toml  LICENSE  README.md  make_docs.sh  rustfmt.toml
.github/workflows/: rust.yml
bench_compare/: .gitignore  Cargo.toml  README.md  bench.rs  bench_javascript.js  bench_nodejs_bindings.js  bench_wasm.js  package-lock.json  package.json
benches/: bench.rs
nodejs-bindings/: README.md  package.json
nodejs-bindings/lib/: index.js
nodejs-bindings/native/: Cargo.toml  build.rs
nodejs-bindings/native/src/: lib.rs
src/: constants.rs  halfwidth_to_hiragana_node_tree.rs  index.rs  isHiragana.rs  isJapanese.rs  isMixed.rs  is_hiragana.rs  is_japanese.rs  is_kana.rs  is_kanji.rs  is_katakana.rs  is_mixed.rs  is_romaji.rs  lib.rs  options.rs  strip_okurigana.rs  tests.rs  toKana.rs  toKatakana.rs  to_hiragana.rs  to_kana.rs  to_kana_node_tree.rs  to_katakana.rs  to_romaji.rs  to_romaji_node_tree.rs  tokenize.rs  traits.rs  trim_okurigana.rs
src/utils/: convertFullwidthCharsToASCII.rs  convert_fullwidth_chars_to_a_s_c_i_i.rs  convert_fullwidth_chars_to_ascii.rs  flatten_kana.js  flatten_romaji.js  getChunk.rs  get_chunk.rs  get_chunk_size.rs  halfwidth_katakana_to_hiragana.rs  hashmap_macro.rs  hiragana_to_katakana.rs  isCharEnglishPunctuation.rs  isCharHiragana.rs  isCharJapanese.rs  isCharJapanesePunctuation.rs  isCharKana.rs  isCharKanji.rs  isCharKatakana.rs  isCharRomaji.rs  isCharSlashDot.rs  isCharUpperCase.rs  is_char_consonant.rs  is_char_english_punctuation.rs  is_char_halfwidth_katakana.rs  is_char_hiragana.rs  is_char_in_range.rs  is_char_japanese.rs  is_char_japanese_number.rs  is_char_japanese_punctuation.rs  is_char_kana.rs  is_char_kanji.rs  is_char_katakana.rs  is_char_latin_number.rs  is_char_long_dash.rs  is_char_punctuation.rs  is_char_romaji.rs  is_char_slash_dot.rs  is_char_upper_case.rs  is_char_vowel.rs  kana_to_romaji_map.rs  (+5 more)
tests/: conversion_tables.rs  is_hiragana.rs  is_japanese.rs  is_kana.rs  is_kanji.rs  is_katakana.rs  is_mixed.rs  is_romaji.rs  punctuation.rs  tests.rs  to_hiragana.rs  to_kana.rs  to_katakana.rs  to_romaji.rs  tokenize.rs  trim_okurigana.rs
upstream_conversions/: Cargo.toml
wana_kana_wasm/: .gitignore  Cargo.toml  README.md  index.js
wana_kana_wasm/src/: lib.rs
