[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
categories = ["text-processing"]
description = "Utility library for checking and converting between Japanese characters - Kanji, Hiragana, Katakana - and Romaji\n"
edition = "2018"
homepage = "https://github.com/PSeitz/wana_kana_rust"
keywords = ["japanese", "katakana", "hiragana", "kana", "romaji"]
license = "MIT"
name = "wana_kana"
repository = "https://github.com/PSeitz/wana_kana_rust"
version = "2.0.0"
[dependencies]
fnv = "1.0.6"
itertools = "0.8.1"
lazy_static = "1.4.0"
regex = { version = "1.3.1", optional = true }

[dev-dependencies]
speculate = "0.1.2"

[features]
enable_regex = ["regex"]
default = []