[package]
name = "nodejs-bindings"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nodejs_bindings"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
wana_kana = { path = "../../" }
